[tool.poetry]
name = "mqtt-client"
version = "0.1.0"
description = "Playground for MQTT stuff in python"
authors = ["Chris Woodall <christopherhwoodall@gmail.com>"]
readme = "README.md"
packages = [{include = "mqtt_client"}]

[tool.poetry.dependencies]
python = "^3.11"
paho-mqtt = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
